date time picker bug fixed

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Raleway:100,200,300,400'>
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="icon/icon-calendar.png" />
     <link rel='stylesheet' href='css/fullcalendar.min.css'/>
@@ -244,7 +245,7 @@
     <hr class="horizontalLine">
     <input placeholder="Title" type="text" id="reminderTitle">
     <div id="datetimepicker" class="input-append date">
-      <input type="text" id="reminderDateTime"></input>
+      <input type="text" id="reminderDateTime" placeholder="DD/MM/YYYY HH:MM:SS"></input>
       <span class="add-on">
         <i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
       </span>
