design bug fixed

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <div id="datetimepicker" class="input-append date">
       <input type="text" id="reminderDateTime" placeholder="DD/MM/YYYY HH:MM:SS"></input>
       <div class="add-on">
-        <i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
+        <i class="fa fa-lg fa-calendar"></i>
       </div>
     </div>
     <script type="text/javascript">
