design bug fixed

--- a/index.html
+++ b/index.html
@@ -245,8 +245,9 @@
     <input placeholder="Title" type="text" id="reminderTitle">
     <div id="datetimepicker" class="input-append date">
       <input type="text" id="reminderDateTime" placeholder="DD/MM/YYYY HH:MM:SS"></input>
+      <br>
       <div class="add-on">
-        <i class="fa fa-lg fa-calendar"></i>
+        <i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
       </div>
     </div>
     <script type="text/javascript">
