design bug fixed

--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
     <div id="datetimepicker" class="input-append date">
       <input type="text" id="reminderDateTime" placeholder="DD/MM/YYYY HH:MM:SS"></input>
       <br>
-      <div class="add-on">
+      <span class="add-on">
         <i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
-      </div>
+      </span>
     </div>
     <script type="text/javascript">
       $('#datetimepicker').datetimepicker({
