design bug fixed

--- a/index.html
+++ b/index.html
@@ -243,9 +243,8 @@
     <h2 class="header-form">Create Reminder</h2>
     <hr class="horizontalLine">
     <input placeholder="Title" type="text" id="reminderTitle">
-    <div id="datetimepicker" class="input-append date">
+    <div id="datetimepicker" class="input-group">
       <input type="text" id="reminderDateTime" placeholder="DD/MM/YYYY HH:MM:SS"></input>
-      <br>
       <span class="add-on">
         <i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
       </span>
