--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     <script type="text/javascript" src="js/jquery.datepair.js"></script>
     <script type="text/javascript" src="js/jquery.datepair.min.js"></script>
     <script type="text/javascript" src="js/my_js.js"></script>
+    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js">
+    </script>
+    <script type="text/javascript" src="http://tarruda.github.com/bootstrap-datetimepicker/assets/js/bootstrap-datetimepicker.min.js">
+    </script>
 <!--reminder app script-->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/moment@2.20.1/moment.js"></script>
   <script>
@@ -131,12 +135,8 @@
 
   });
   </script>
-  <script type="text/javascript"
-   src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js">
-  </script>
-  <script type="text/javascript"
-   src="http://tarruda.github.com/bootstrap-datetimepicker/assets/js/bootstrap-datetimepicker.min.js">
-  </script>
+
+
   </head>
   <body id="body" style="overflow:hidden;">
     <!--Navigation bar-->
