--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
     <script type="text/javascript" src="js/jquery.datepair.js"></script>
     <script type="text/javascript" src="js/jquery.datepair.min.js"></script>
     <script type="text/javascript" src="js/my_js.js"></script>
-    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js">
-    </script>
-    <script type="text/javascript" src="http://tarruda.github.com/bootstrap-datetimepicker/assets/js/bootstrap-datetimepicker.min.js">
-    </script>
+    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="http://tarruda.github.com/bootstrap-datetimepicker/assets/js/bootstrap-datetimepicker.min.js"></script>
 <!--reminder app script-->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/moment@2.20.1/moment.js"></script>
   <script>
