--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
         // initialize datepair
         var basicExampleEl = document.getElementById('basicExample');
         var datepair = new Datepair(basicExampleEl);
+        if (!window.jQuery) document.write('<script src="jquery.min.js"><\/script>');
     </script>
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/bootstrap-datetimepicker.min.js"></script>
