--- a/dateTimePicker.html
+++ b/dateTimePicker.html
@@ -18,7 +18,7 @@
   <title>datetime picker base master by Eonasdan</title>
   <script type='text/javascript'>//<![CDATA[
     $(window).load(function(){
-    $('#datetimepicker1').datetimepicker({format: 'DD-MM-YYYY HH:mm:ss'});
+    $('#datetimepicker1').datetimepicker();
     $('#datetimepicker2').datetimepicker();
   });//]]>
   </script>
